--- a/data/data-samples/sample-data-cassandra-book/src/main/resources/data-book-application.properties
+++ b/data/data-samples/sample-data-cassandra-book/src/main/resources/data-book-application.properties
@@ -11,10 +11,10 @@
 #* or implied. See the License for the specific language governing permissions and limitations under
 #* the License.
 #*/
-spring.data.cassandra.keyspace-name=synapse
-spring.data.cassandra.local-datacenter=datacenter1
-spring.data.cassandra.port=9042
-spring.data.cassandra.contact-points=127.0.0.1
-spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
-#spring.data.cassandra.username = cassandra
-#spring.data.cassandra.password = cassandra
+spring.data.cassandra.book.keyspace-name=synapse
+spring.data.cassandra.book.local-datacenter=datacenter1
+spring.data.cassandra.book.port=9042
+spring.data.cassandra.book.contact-points=127.0.0.1
+spring.data.cassandra.book.schema-action=CREATE_IF_NOT_EXISTS
+#spring.data.cassandra.book.username = cassandra
+#spring.data.cassandra.book.password = cassandra
